--- a/attendance/attendance.html
+++ b/attendance/attendance.html
@@ -72,9 +72,9 @@
                     <!-- Social -->
                     <div class="container mx-auto mt-4">
                       <h4> Social </h4>
-                      <a href="https://www.linkedin.com/in/mirco-mannino-023787174/"> <img src="../img/logo/linkedin.svg" width="30" height="30" class="img-fluid"/> </a>
-                      <a href="https://github.com/mircomannino"> <img src="../img/logo/github.svg" width="30", height="30" class="img-fluid"/> </a>
-                      <a href="https://scholar.google.com/citations?user=rbnJScQAAAAJ&hl=it&oi=ao"> <img src="../img/logo/googlescholar.svg", width="30", height="30" class="img-fluid"/> </a> <br/>
+                      <a target="_blank" href="https://www.linkedin.com/in/mirco-mannino-023787174/"> <img src="../img/logo/linkedin.svg" width="30" height="30" class="img-fluid"/> </a>
+                      <a target="_blank" href="https://github.com/mircomannino"> <img src="../img/logo/github.svg" width="30", height="30" class="img-fluid"/> </a>
+                      <a target="_blank" href="https://scholar.google.com/citations?user=rbnJScQAAAAJ&hl=it&oi=ao"> <img src="../img/logo/googlescholar.svg", width="30", height="30" class="img-fluid"/> </a> <br/>
                     </div>
                   </div>
                 </div>
@@ -84,13 +84,29 @@
 
           <!-- RIGHT SIDE -->
           <div class="col-lg-8">
+              <!--------------- Attendance header 2024 ----------------------->
+              <div class="container">
+                <h2> 2024 </h2>
+
+                  <!-- Item -->
+                  <div class="fluid-container mt-2 p-2 border border-2 border-dark">
+                    <span class="attendance-name"> <a target="_blank" href="https://www.hipeac.net/2024/munich/"> HiPEAC 2024 Conference </a> </span> <br/>
+                    <span class="attendance-date"> Jan 16-19 2024, </span>
+                    <span class="attendance-venue"> Munich, DE </span>
+                  </div>
+                  <!-- END item -->
+              </div>
+              <!-------------- END Attendance header 2024 -------------------->
+
+              <hr/>
+
               <!--------------- Attendance header 2023 ----------------------->
               <div class="container">
                 <h2> 2023 </h2>
 
                   <!-- Item -->
                   <div class="fluid-container mt-2 p-2 border border-2 border-dark">
-                    <span class="attendance-name"> <a href="https://www.imperial.ac.uk/hipeds-centre/workshops/nanda-2023/"> Novel Architecture and Novel Design Automation Workshop </a> </span> <br/>
+                    <span class="attendance-name"> <a target="_blank" href="https://www.imperial.ac.uk/hipeds-centre/workshops/nanda-2023/"> Novel Architecture and Novel Design Automation Workshop </a> </span> <br/>
                     <span class="attendance-date"> Sep 11-12 2023, </span>
                     <span class="attendance-venue"> London, UK </span>
                   </div>
@@ -98,7 +114,7 @@
 
                   <!-- Item -->
                   <div class="fluid-container mt-2 p-2 border border-2 border-dark">
-                    <span class="attendance-name"> <a href="https://www.computingfrontiers.org/2023/"> Computing Frontiers 2023 Conference </a> </span> <br/>
+                    <span class="attendance-name"> <a target="_blank" href="https://www.computingfrontiers.org/2023/"> Computing Frontiers 2023 Conference </a> </span> <br/>
                     <span class="attendance-date"> May 09-11 2023, </span>
                     <span class="attendance-venue"> Bologna, IT</span>
                   </div>
@@ -106,7 +122,7 @@
 
                   <!-- Item -->
                   <div class="fluid-container mt-2 p-2 border border-2 border-dark">
-                    <span class="attendance-name"> <a href="https://www.hipeac.net/2023/toulouse/"> HiPEAC 2023 Conference </a> </span> <br/>
+                    <span class="attendance-name"> <a target="_blank" href="https://www.hipeac.net/2023/toulouse/"> HiPEAC 2023 Conference </a> </span> <br/>
                     <span class="attendance-date"> Jan 16-18 2023, </span>
                     <span class="attendance-venue"> Toulouse, FR </span>
                   </div>
@@ -122,7 +138,7 @@
 
                 <!-- Item -->
                 <div class="fluid-container mt-2 p-2 border border-2 border-dark">
-                  <span class="attendance-name"> <a href="https://open-src-soc.org/2022-05/index.html"> Spring 2022 RISC-V Week </a> </span> <br/>
+                  <span class="attendance-name"> <a target="_blank" href="https://open-src-soc.org/2022-05/index.html"> Spring 2022 RISC-V Week </a> </span> <br/>
                   <span class="attendance-date"> May 3-5 2022, </span>
                   <span class="attendance-venue">Paris, FR</span>
                 </div>
@@ -138,7 +154,7 @@
 
               <!-- Item -->
               <div class="fluid-container mt-2 p-2 border border-2 border-dark">
-                <span class="attendance-name"> <a href="https://mclabservices.di.uniroma1.it/iwes/2021/"> IWES (Italian Workshop on Embedded Systems) 2021 </a> </span> <br/>
+                <span class="attendance-name"> <a target="_blank" href="https://mclabservices.di.uniroma1.it/iwes/2021/"> IWES (Italian Workshop on Embedded Systems) 2021 </a> </span> <br/>
                 <span class="attendance-date"> December 9-10 2021, </span>
                 <span class="attendance-venue">Rome, IT </span>
               </div>
