Add riscv pw project

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -98,6 +98,41 @@
 
               <!-- Item N.1 -->
               <div class="fluid-container ">
+                <div class="row align-items-start fluid">
+                    <div class="col-lg-6">
+                      <span class="projects-title"> RISC-V page table walk in gem5 SE mode </span> </br>
+                      <span class="projects-description">
+                          Integration of RISC-V page table walk, and TLB statistics, in 
+                          gem5 Syscall Emulation mode. The work was presented
+                          at <a href="https://rapidoworkshop.github.io/2024/" target="_blank"> RAPIDO'24 </a> workshop (HiPEAC).
+                      </span> </br> 
+                      <!-- GitHub button -->
+                      <div class="container mt-2 p-0">
+                        <a href="https://github.com/mircomannino/gem5/tree/rapido24" target="_blank"
+                        class="projects-link">
+                        <img src="../img/logo/github.svg" width="30", height="30" class="img-fluid"/>
+                         GitHub repository 
+                        </a>
+                      </div>
+                      <!-- Scholar button -->
+                      <div class="container mt-2 p-0">
+                        <a href="https://doi.org/10.1145/3642921.3642926" target="_blank"
+                        class="projects-link">
+                        <img src="../img/logo/scholar_logo.png" width="30", height="30" class="img-fluid"/>
+                         Paper 
+                        </a>
+                      </div>
+                  </div>
+                  <div class="col-lg-6">
+                      <img src="./img/gem5_logo.png" class="img-thumbnail">
+                  </div>
+                </div>                
+              </div>
+              <hr>
+              <!-- END Item N.1 -->
+
+              <!-- Item N.2 -->
+              <div class="fluid-container ">
                   <div class="row align-items-start fluid">
                       <div class="col-lg-6">
                         <span class="projects-title"> RISCV Verilog description </span> </br>
@@ -122,9 +157,9 @@
                 </div>                
               </div>
               <hr>
-              <!-- END Item N.1 -->
+              <!-- END Item N.2 -->
 
-              <!-- Item N.2 -->
+              <!-- Item N.3 -->
               <div class="fluid-container ">
                   <div class="row align-items-start fluid">
                       <div class="col-lg-6">
@@ -149,7 +184,7 @@
                 </div>                
               </div>
               <hr>
-              <!-- END Item N.2 -->
+              <!-- END Item N.3 -->
 
 
             
