--- a/publications/publications.html
+++ b/publications/publications.html
@@ -104,7 +104,7 @@
                 <span class="publications-conference">
                   Proceedings of the 16th Workshop on Rapid Simulation and Performance Evaluation for Design Optimization: Methods and Tools (RAPIDO'24). 2024
                 </span> <br/>
-                <a class="pub-link" target="_blank" href=""> WEB </a>
+                <a class="pub-link" target="_blank" href="https://doi.org/10.1145/3642921.3642926"> WEB </a>
                 <a class="pub-link" target="_blank" href="https://github.com/mircomannino/gem5/tree/rapido24"> Source code (GitHub) </a>
               </div>
               <!-- END item -->
