--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="card">
               <div class="card-body">
                 <!-- General info -->
-                <div> <img src="img/Photo.png" class="rounded-circle mx-auto d-block img-fluid"> </div>
+                <div> <img src="./img/photo.jpg" class="rounded-circle mx-auto d-block img-fluid"> </div>
                   <div class="container mx-auto m-4">
                     <h3> Mirco Mannino </h3>
                     PhD student <br/>
