--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
             <li class="nav-item">
               <a class="nav-link" href="./publications/publications.html"> Publications </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./attendance/attendance.html"> Attendance </a>
-            </li>
           </ul>
         </div>
       </nav>
@@ -55,7 +52,7 @@
           <div class="col-lg-4">
             <div class="card">
               <div class="card-body">
-                <!-- General info -->
+                <!-- GeneraFl info -->
                 <div> <img src="./img/photo.jpg" class="rounded-circle mx-auto d-block img-fluid"> </div>
                   <div class="container mx-auto m-4">
                     <h3> Mirco Mannino </h3>
