--- a/publications/publications.html
+++ b/publications/publications.html
@@ -88,6 +88,24 @@
               <hr>
               <!-- Publications content -->
 
+              <!-- Item N.8 -->
+              <div class="fluid-container mt-4">
+                <span class="publications-number"> [8] </span>
+                <span class="publications-title">
+                  <b> DeVAS: Decoupled Virtual Address Spaces </b>
+                </span> <br/>
+                <span class="publications-author">
+                  <b> M. Mannino </b>, B. Peccerillo, A. Mondelli, S. Bartolini.
+                  <br/>
+                </span>
+                <span class="publications-conference">
+                  Proceedings of IEEE 36th International Symposium on Computer Architecture and High Performance Computing (SBAC-PAD'24). 2024
+                </span> <br/>
+                <a class="pub-link" target="_blank" href="https://doi.org/"> WEB </a>
+              </div>
+              <!-- END item -->
+
+
               <!-- Item N.7 -->
               <div class="fluid-container mt-4">
                 <span class="publications-number"> [7] </span>
